syntax = "proto3";
package api;
option go_package = ".;api";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}


//// Customer Service //////
service Customer {
  rpc SetCustomer(NewCustomer) returns (CustomerReply) {}
  rpc GetCustomer(GetCustomerID) returns (CustomerReply) {}
}

message NewCustomer {
  string name = 1;
  string address = 2;
}

message CustomerReply {
  string name = 1;
  string address = 2;
}

message GetCustomerID {
  int32 id = 1;
}


//// Order Service //////



//// Stock Service /////

service Stock {
  rpc AddStock(NewStock) returns () {}
  rpc GetArticle(TakeArticle) returns (GetReply) {}
  rpc GetStock(ArticleID) returns (GetStockReply) {}
}

message NewStock {
  int32 id = 1;
  int32 amount = 2;
}

message GetReply {
  int32 amount = 1;
}

message TakeArticle {
  int32 id = 1;
  int32 amount = 2;
}

message ArticleID {
  int32 id = 1;
}

message GetStockReply {
  string answer = 1;
}